--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "blob-animated": "^1.2.9",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "kute.js": "^2.2.4",
