--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "20.1.5",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "@vercel/analytics": "^1.0.1",
     "autoprefixer": "10.4.14",
     "blob-animated": "^1.2.9",
     "eslint": "8.40.0",
