--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "@thednp/dommatrix": "^2.0.4",
     "@types/node": "20.1.5",
     "@types/react": "18.2.6",
