--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-multi-carousel": "^2.8.4",
     "react-pdf": "^6.2.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/react-image-gallery": "^1.2.0",
     "@types/react-pdf": "^6.2.0"
   }
 }
