--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^4.8.0",
     "react-multi-carousel": "^2.8.4",
     "react-pdf": "^6.2.2",
+    "resend": "^4.1.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
