--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@sendgrid/mail": "^7.7.0",
     "@thednp/dommatrix": "^2.0.4",
     "@types/node": "20.1.5",
@@ -17,6 +18,8 @@
     "@vercel/analytics": "^1.0.1",
     "autoprefixer": "10.4.14",
     "blob-animated": "^1.2.9",
+    "embla-carousel-autoplay": "^8.5.2",
+    "embla-carousel-react": "^8.5.2",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "kute.js": "^2.2.4",
